# graphviz-interactive

./: README.md  pyproject.toml  tasks.py
example/: test.ipynb
src/widget_test/: _jinja.py  graphviz.py  repr_object.py
src/widget_test/templates/: d3-graphviz.html  d3-graphviz.jinja
tests/: test_widget_test.py
