[tool.poetry]
name = "widget-test"
version = "0.1.0"
description = ""
authors = ["Luttik <dtluttik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
graphviz = "^0.15"
jinja2 = "^2.11.2"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
